# cpptest

./: .clang-tidy  CMakeLists.txt  CTestConfig.cmake  cdash.cmake  fabonacci.cxx  main.cxx  mytest.cxx  test.sh
.cache/clangd/index/: fabonacci.cxx.EE875C847B57297C.idx
.github/workflows/: actions.yaml  actions.yml  clangtidy.yml  merge-action.yml
archive/: de_con_structor.cxx  hierachy_class.cxx  stdMinElement.cxx
src/: UseRoot.hpp  class1.cxx  class1.hpp
